--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Patel\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Patel\\Desktop\\flutter
+sdk.dir=/Users/muntazir/Library/Android/sdk
+flutter.sdk=/Users/muntazir/Desktop/flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
-flutter.buildMode=profile
+flutter.buildMode=release
