--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,9 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Patel\Desktop\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Patel\AndroidStudioProjects\fashionation
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_ROOT=/Users/muntazir/Desktop/flutter
+FLUTTER_APPLICATION_PATH=/Users/muntazir/AndroidStudioProjects/fashionation
+FLUTTER_TARGET=/Users/muntazir/AndroidStudioProjects/fashionation/lib/main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build\ios
-FLUTTER_FRAMEWORK_DIR=C:\Users\Patel\Desktop\flutter\bin\cache\artifacts\engine\ios
+SYMROOT=${SOURCE_ROOT}/../build/ios
+FLUTTER_FRAMEWORK_DIR=/Users/muntazir/Desktop/flutter/bin/cache/artifacts/engine/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+TRACK_WIDGET_CREATION=true
